# markdown-lsp

./: Cargo.toml  README.md
.github/workflows/: rust-ci.yaml
markdown-lsp-core/: Cargo.toml
markdown-lsp-core/src/: lib.rs  server_configuration.rs  text_document_hover.rs
server/: Cargo.toml
server/src/: logger.rs  main.rs
